# opengl

./: .gitignore  CMakeLists.txt  README.md
dependencies/glad/include/glad/: glad.h
dependencies/glad/lib/: glad.c
dependencies/glfw/lib/: glfw3.lib
resources/shaders/: 2.light_cast.fs  2.light_cast.vs  2.light_source.fs  3.model.vs  shader.vert  shader1.vs  shader2.fs  shader2.vs
src/: Application.cpp  Camera.h  GettingStarted.cpp  Lighting.cpp  ModelLoading.cpp  Shader.cpp  Shader.h  Texture.h  config.h.in
src/commons/: Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
